gitops/bootstrap/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  rules:
    - host: argocd.local.computer
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                name: http
  tls:
    - hosts:
        - argocd.local.computer
      secretName: argocd-tls-cert
